solve submit button and improve controller