@@ -10,6 +10,7 @@ import org.slf4j.LoggerFactory;
 import com.github.jasync.sql.db.QueryResult;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 
@@ -31,37 +32,41 @@ public class SupplyController {
             try {
                 // Vérification si l'article existe avec le même prix
                 String checkArticleQuery = """
-                    SELECT idProduit FROM Article 
-                    WHERE idProduit = (SELECT idProduit FROM Produit WHERE nom = ?) 
-                    AND volume = ? 
-                    AND recipient = ?::typeRecipient
-                    AND datePeremption = ? 
-                    AND dateFinDeVente = ? 
-                    AND prix != ?;
+                    SELECT idProduit FROM Article
+                    WHERE idProduit = (SELECT idProduit FROM Produit WHERE nom = ?)
+                        AND volume = ? 
+                        AND recipient = ?::typeRecipient
+                        AND datePeremption = ? 
+                        AND dateFinDeVente = ? 
+                        AND prix != ?;
                     """;
 
                 String insertProductQuery = """
-                    INSERT INTO Produit (idProvenance, nom, tauxAlcool) 
-                    VALUES (1, ?, ?) RETURNING idProduit;
+                    INSERT INTO Produit (idProvenance, nom, tauxAlcool)
+                    VALUES (?, ?, ?) RETURNING idProduit;
                     """;
 
                 String insertArticleQuery = """
-                    INSERT INTO Article (idProduit, volume, recipient, prix, datePeremption, dateFinDeVente) 
+                    INSERT INTO Article (idProduit, volume, recipient, prix, datePeremption, dateFinDeVente)
                     VALUES (?, ?, ?::typeRecipient, ?, ?, ?);
                     """;
 
                 String insertMouvementStockQuery = """
-                    INSERT INTO MouvementStock (idMagasin, idProduit, volume, recipient, quantite) 
+                    INSERT INTO MouvementStock (idMagasin, idProduit, volume, recipient, quantite)
                     VALUES (?, ?, ?, ?::typeRecipient, ?) RETURNING id;
                     """;
 
                 String insertApprovisionnementQuery = """
-                    INSERT INTO Approvisionnement (idMouvementStock, dateCommande) 
+                    INSERT INTO Approvisionnement (idMouvementStock, dateCommande)
                     VALUES (?, ?);
                     """;
+                String findFournisseurQuery = """
+                        SELECT idFournisseur FROM Fournisseur
+                        WHERE nom = ?;
+                        """;
 
                 String insertApprovisionnementFournisseurQuery = """
-                    INSERT INTO Approvisionnement_Fournisseur (idMouvementStock, idFournisseur) 
+                    INSERT INTO Approvisionnement_Fournisseur (idMouvementStock, idFournisseur)
                     VALUES (?, ?);
                     """;
 
@@ -72,9 +77,10 @@ public class SupplyController {
                     String productProvider = "1";
                     String productEndOfSales = request.EndOfSales.get(i);
                     String productPeremption = request.Peremption.get(i);
+                    String fournisseur = request.fournisseur.get(i);
                     int productQuantity = request.quantity.get(i);
                     double productPrice = request.prix.get(i);
-                    double tauxAlcool = request.tauxAlcool.get(i); // Nouveau champ
+                    double tauxAlcool = request.tauxAlcool.get(i);
 
                     // Vérification si l'article avec un prix différent existe déjà
                     CompletableFuture<QueryResult> checkArticleFuture = connection.sendPreparedStatement(
@@ -90,12 +96,19 @@ public class SupplyController {
                         return;
                     }
 
+
                     // Insérer un nouveau produit si inexistant
                     CompletableFuture<QueryResult> productFuture = connection.sendPreparedStatement(insertProductQuery,
                             Arrays.asList(1, productName, tauxAlcool));
 
                     QueryResult productResult = productFuture.get();
-                    int idProduit = (int) productResult.getRows().get(0).get(0);
+                    int idProduit;
+                    if(productResult.getRows().getFirst().getFirst() != null) {
+                        idProduit = (int) productResult.getRows().getFirst().getFirst();
+                    }
+                    else {
+                        throw new Exception("IdProduit manquant");
+                    }
 
                     // Insérer un nouvel article
                     connection.sendPreparedStatement(insertArticleQuery,
@@ -106,18 +119,40 @@ public class SupplyController {
                             insertMouvementStockQuery, Arrays.asList(1, idProduit, productVolume, productRecipient, productQuantity));
 
                     QueryResult mouvementStockResult = mouvementStockFuture.get();
-                    int idMouvementStock = (int) mouvementStockResult.getRows().get(0).get(0);
+                    int idMouvementStock;
+                    if(mouvementStockResult.getRows().getFirst().getFirst() != null) {
+                        idMouvementStock = (int) mouvementStockResult.getRows().getFirst().getFirst();
+                    }
+                    else{
+                        throw new Exception("IdMouvementStock manquant");
+                    }
 
                     // Insérer l'approvisionnement
                     connection.sendPreparedStatement(insertApprovisionnementQuery,
                             Arrays.asList(idMouvementStock, request.dateJour));
 
-                    // Associer à un fournisseur
-                    connection.sendPreparedStatement(insertApprovisionnementFournisseurQuery,
-                            Arrays.asList(idMouvementStock, 1));
+
+                    CompletableFuture<QueryResult> findFIdFournisseur = connection.sendPreparedStatement(
+                            findFournisseurQuery, Collections.singletonList(fournisseur));
+
+                    QueryResult findFournisseurResult = findFIdFournisseur.get();
+
+                    if(findFournisseurResult.getRows().getFirst() == null){
+                        connection.sendPreparedStatement(insertApprovisionnementFournisseurQuery,
+                                Arrays.asList(idMouvementStock, null));
+
+                    }
+                    else{
+                        // Associer à un fournisseur
+                        connection.sendPreparedStatement(insertApprovisionnementFournisseurQuery,
+                                Arrays.asList(idMouvementStock, findFournisseurResult.getRows().getFirst()));
+                    }
+
                 }
 
                 ctx.json(Map.of("message", "Approvisionnement enregistré avec succès !"));
+                ctx.status(200).json(Map.of("message", "OK, enregistrement effectué"));
+
             } catch (Exception e) {
                 logger.error("Erreur d'insertion :", e);
                 ctx.status(500).json(Map.of("error", "Erreur lors de l'enregistrement"));
